externalize swagger ui and fix swagger.json
